# ed_object_models

./: CMakeLists.txt  README.md  package.xml
models/amigo_case/: model.yaml
models/brsu/: model.yaml  rooms.txt
models/brsu/walls/: model.yaml
models/ddw/chair/: model.yaml
models/ddw/couch/: model.yaml
models/ddw/salon/: model.yaml
models/ddw/table/: model.yaml
models/rgo2018/: model.yaml
models/rgo2018/bar/: model.yaml
models/rgo2018/table_dinner/: model.yaml
models/rgo2018/table_dinner2/: model.yaml
models/rgo2018/table_salon_double/: model.yaml
models/rgo2018/walls/: model.yaml  rgo2018largecleaned.pgm  rgo2018largecleaned.xcf
models/robotics_testlab_B/bed/: model.yaml
models/robotics_testlab_B/black_cabinet/: model.yaml
models/robotics_testlabs/: model.yaml
models/robotics_testlabs/battery_table/: model.yaml
models/robotics_testlabs/flight_case/: model.yaml
models/rwc2017/: model.yaml  rooms.txt
models/rwc2017/bed/: model.yaml
models/rwc2017/cabinet_black/: model.yaml
models/rwc2017/cabinet_brown_high/: model.yaml
models/rwc2017/cabinet_brown_low/: model.yaml
models/rwc2017/cabinet_desk/: model.yaml
models/rwc2017/cabinet_kast/: model.yaml
models/rwc2017/cabinet_kitchen/: model.yaml
models/rwc2017/cabinet_showcase/: model.yaml
models/rwc2017/cabinet_simple/: model.yaml
models/rwc2017/cabinet_simple_no_areas/: model.yaml
models/rwc2017/desk/: model.yaml
models/rwc2018/: balcony.txt  model.yaml
models/table_120x80x76/: model.yaml
models/tue_hallway_RLtoAL/: model.yaml
scripts/: create-model.py  dump-ed.py
(+63 files in other folders)
