cmake_minimum_required(VERSION 2.8.3)
project(ed_object_models)

#set(CMAKE_BUILD_TYPE "RelWithDebInfo")

## Find catkin macros and libraries
find_package(catkin REQUIRED COMPONENTS
)

###################################
## catkin specific configuration ##
###################################
catkin_package(
)
